--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -21,7 +21,7 @@
   list-style: none;
   margin: 20px 0;
   a {
-    color: black;
+    color:black;
     text-decoration: none;
     font-weight: 600;
     font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
@@ -38,7 +38,7 @@
   justify-content: space-between;
   align-items: center;
   a{
-    color: black;
+    color:black;
     font-size: 1.5rem;
     font-weight: 600;
   }
@@ -49,17 +49,23 @@
   background: transparent;
   color: black;
   font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .nav-links {
   height: 0;
   overflow: hidden;
-  background-color: #BFB1A1;
+  background-color:#AA9E88;
   text-align: center;
 }
 
 .nav-open{
   height: 25vh;
+  z-index: 10;
+  position: fixed;
+  width: 100%;
+  top:65px;
+  left: 0;
 }
 
 .header-content{
