--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -93,6 +93,13 @@
   width: 70%;
  }
 
+//  // Skills section
+//   .skills-content{
+//   ul{
+//     grid-template-columns: repeat(3,1fr);
+//   }
+//  }
+
   // PROJECT STYLING 
 
   .project1, .project2{
