--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 body{
-  background-color: #F1EEE4;
+  background-color:$white-clr;
   font-family:$primary-font ;
   font-weight:400;
   font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
