--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,7 +1,13 @@
+
 // site fonts
 $primary-font:'Source Sans Pro',sans-serif;
 $secondary-font:'Playfair Display',serif;
 
 
 // site colours
+$white-clr:#F1EEE4;
+$black-clr:#000000;
+$khaki-clr:#AA9E88;
+$eerie-black-clr:#282415;
+$ecru-clr:#AB9F5F;
 
