--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -2,13 +2,13 @@
 
 footer{
   background-color:#282415;  
-  color:#F5F5F5;
+  color:$white-clr;
   
   p{
     margin: 0;
-    padding: 10px 0;
+    padding: 15px 0;
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-align: center;
   }
 }
