--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -8,23 +8,29 @@
   height: 70%;
 }
 
-.navbar{
+.nav-bar{
   width:100%;
   .container{
     max-width:1260px;
     margin: 0 auto;
-    padding: 20px 40px;
+    padding: 1.25em 2.5em;
   }
 }
 
 .nav-link{
-  list-style: none;
-  margin: 20px 0;
-  a {
-    color:black;
+  list-style:none;
+  margin:1.25em 0;
+  a{
+    color:$black-clr;
     text-decoration: none;
     font-weight: 600;
     font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
+  }
+  a:hover{
+    background-color:$white-clr;
+  }
+  a:focus{
+    border: 2px solid $white-clr;
   }
 }
 
@@ -38,7 +44,7 @@
   justify-content: space-between;
   align-items: center;
   a{
-    color:black;
+    color:$black-clr;
     font-size: 1.5rem;
     font-weight: 600;
   }
@@ -47,15 +53,23 @@
 .nav-toggle{
   border: transparent;
   background: transparent;
-  color: black;
+  color:$black-clr;
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+.nav-toggle:focus-visible{
+  border: 2px solid $eerie-black-clr;
+}
+
+.nav-toggle:hover{
+  background-color: $ecru-clr;
 }
 
 .nav-links {
   height: 0;
   overflow: hidden;
-  background-color:#AA9E88;
+  background-color:$khaki-clr;
   text-align: center;
 }
 
@@ -64,7 +78,7 @@
   z-index: 10;
   position: fixed;
   width: 100%;
-  top:65px;
+  top:4.0625em;
   left: 0;
 }
 
@@ -75,3 +89,5 @@
     padding-bottom: 0;
   }
 }
+
+
