--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,5 +4,8 @@
 @forward './partials/typography';
 @forward './partials/header';
 @forward './partials/footer';
-@forward './partials/main';
+@forward './partials/contactForm';
+@forward './partials/projects';
+@forward './partials/aboutMe';
+@forward './partials/techSkills';
 @forward './partials/mediaQueries';
