--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -40,7 +40,7 @@
         cursor: pointer;
       }
       a:hover{
-        border: 2px solid $ecru-clr;
+        border-bottom: 2px solid $ecru-clr;
       }
       a:focus-visible{
         border: 2px solid $ecru-clr;
