--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,93 +273,6 @@ h3 {
   font-size: clamp(1rem, 0.9149rem + 0.4255vw, 1.25rem);
 }
 
-.hero-img {
-  background-image: url(/asset/pexels-karina-zhukovskaya-6446685.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 70%;
-}
-
-.nav-bar {
-  width: 100%;
-}
-.nav-bar .container {
-  max-width: 1260px;
-  margin: 0 auto;
-  padding: 1.25em 2.5em;
-}
-
-.nav-link {
-  list-style: none;
-  margin: 1.25em 0;
-}
-.nav-link a {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
-}
-.nav-link a:hover {
-  border: 2px solid #282415;
-}
-
-.flex-nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.nav-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-header a {
-  color: #000000;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.nav-toggle {
-  border: transparent;
-  background: transparent;
-  color: #000000;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-.nav-toggle:focus-visible {
-  border: 2px solid #282415;
-}
-
-.nav-toggle:hover {
-  border: 2px solid #282415;
-}
-
-.nav-links {
-  height: 0;
-  overflow: hidden;
-  background-color: #AA9E88;
-  text-align: center;
-}
-
-.nav-open {
-  height: 25vh;
-  z-index: 10;
-  position: absolute;
-  width: 100%;
-  top: 4.0625em;
-  left: 0;
-}
-
-.header-content {
-  margin-top: 4em;
-}
-.header-content h1 {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
 footer {
   background-color: #282415;
   color: #F1EEE4;
@@ -498,7 +411,7 @@ footer p {
   cursor: pointer;
 }
 .projects .project-info .project-links a:hover {
-  border: 2px solid #AB9F5F;
+  border-bottom: 2px solid #AB9F5F;
 }
 .projects .project-info .project-links a:focus-visible {
   border: 2px solid #AB9F5F;
@@ -535,6 +448,94 @@ footer p {
 .skills-section .skills-content ul li i {
   font-size: 1.5rem;
   margin-bottom: 0.25em;
+}
+
+.hero-img {
+  background-image: url(/asset/pexels-karina-zhukovskaya-6446685.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 70%;
+}
+
+.nav-bar {
+  width: 100%;
+}
+.nav-bar .container {
+  max-width: 1260px;
+  margin: 0 auto;
+  padding: 1.25em 2.5em;
+}
+
+.nav-link {
+  list-style: none;
+  margin: 1.25em 0;
+}
+.nav-link a {
+  color: #000000;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: clamp(0.9rem, 0.83rem + 0.27vw, 1rem);
+}
+.nav-link a:hover {
+  cursor: pointer;
+  opacity: 60%;
+}
+
+.flex-nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-header a {
+  color: #000000;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.nav-toggle {
+  border: transparent;
+  background: transparent;
+  color: #000000;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.nav-toggle:focus-visible {
+  border: 2px solid #282415;
+}
+
+.nav-toggle:hover {
+  border: 2px solid #282415;
+}
+
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  background-color: #DED8CF;
+  text-align: center;
+}
+
+.nav-open {
+  height: 25vh;
+  z-index: 10;
+  position: absolute;
+  width: 100%;
+  top: 4.0625em;
+  left: 0;
+}
+
+.header-content {
+  margin-top: 4em;
+}
+.header-content h1 {
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 @media (min-width: 640px) {
