small css changes

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -28,7 +28,10 @@
     cursor: pointer;
   }
   a:hover{
-    border-bottom: 2px solid $eerie-black-clr;
+    border-bottom: 2px solid $black-clr ;
+  }
+  a:active, a:focus{
+    color:$orange-clr;
   }
 }
 
@@ -41,6 +44,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1em;
 }
 
 .nav-toggle{
@@ -51,12 +55,17 @@
   font-size: clamp(1.5rem, 0.6017rem + 1.9915vw, 1.875rem); 
 }
 
-.nav-toggle:focus-visible{
-  background-color: $ecru-clr;
+.nav-toggle:focus-visible .fa-bars{
+  outline: 2px dotted $black-clr;
 }
 
-.nav-toggle:hover{
-  transform: rotate(180deg) scale(1);
+.nav-toggle:hover .fa-bars{
+  color:$orange-clr;
+  transition:color 0.2s ease-in;
+}
+
+.nav-toggle:active{
+  transform:translate(4px);
 }
 
 .nav-links {
