--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,9 +5,10 @@ $secondary-font:'Playfair Display',serif;
 
 
 // site colours
-$white-clr:#F1EEE4;
+$white-clr:#ffffff;
 $black-clr:#000000;
 $eerie-black-clr:#282415;
 $ecru-clr:#AB9F5F;
 $timberwolf-clr:#DED8CF;
 $sage-clr:#CEC7A1;
+$orange-clr:#C05808;
