--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,7 +275,7 @@ h3 {
 
 footer {
   background-color: #282415;
-  color: #F1EEE4;
+  color: #ffffff;
 }
 footer p {
   margin: 0;
@@ -427,7 +427,7 @@ footer p {
 
 .skills-section {
   background-color: #282415;
-  color: #F1EEE4;
+  color: #ffffff;
   margin: 0;
   padding: 3.125em 0;
 }
@@ -479,7 +479,10 @@ footer p {
   cursor: pointer;
 }
 .nav-link a:hover {
-  border-bottom: 2px solid #282415;
+  border-bottom: 2px solid #000000;
+}
+.nav-link a:active, .nav-link a:focus {
+  color: #C05808;
 }
 
 .flex-nav {
@@ -491,6 +494,7 @@ footer p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1em;
 }
 
 .nav-toggle {
@@ -501,12 +505,17 @@ footer p {
   font-size: clamp(1.5rem, 0.6017rem + 1.9915vw, 1.875rem);
 }
 
-.nav-toggle:focus-visible {
-  background-color: #AB9F5F;
+.nav-toggle:focus-visible .fa-bars {
+  outline: 2px dotted #000000;
 }
 
-.nav-toggle:hover {
-  transform: rotate(180deg) scale(1);
+.nav-toggle:hover .fa-bars {
+  color: #C05808;
+  transition: color 0.2s ease-in;
+}
+
+.nav-toggle:active {
+  transform: translate(4px);
 }
 
 .nav-links {
