final commit adding scroll to top arrow

--- a/styles/partials/_baseStyles.scss
+++ b/styles/partials/_baseStyles.scss
@@ -8,6 +8,7 @@
 html{
     font-size: 125%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 img{
@@ -26,5 +27,4 @@ ul{
     padding: 0;
     list-style: none;
 }
-
 
