--- a/styles/partials/_contactForm.scss
+++ b/styles/partials/_contactForm.scss
@@ -95,5 +95,17 @@
   }
 }
 
+// Scroll to top arrow styling
 
-
+.to-top{
+  position:fixed;
+  background-color:$sage-clr;
+  color:$eerie-black-clr;
+  width:1.5em;
+  height:1.5em;
+  bottom:1em;
+  right:0.5em;
+  text-align: center;
+  border-radius: 8px;
+  padding:5px;
+}
