--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -5,7 +5,7 @@ footer{
   color:$white-clr;
   p{
     margin: 0;
-    padding: 15px 0;
+    padding: 0.75em 0;
     font-weight: 600;
     font-size: 1rem;
     text-align: center;
