--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -14,7 +14,7 @@ h1, .logo{
   font-size: clamp(1.25rem, 0.6543rem + 2.9787vw, 3rem);
 }
 
-h2{
+h2, .to-top{
   font-family: $primary-font;
   font-weight: 600;
   font-size: clamp(1.25rem, 1.0372rem + 1.0638vw, 1.875rem);
