--- a/styles/styles.css
+++ b/styles/styles.css
@@ -563,18 +563,14 @@ footer p {
   .about-content {
     width: 70%;
   }
-  .project1, .project2 {
+  .project2,
+  .project3,
+  .project4 {
     display: flex;
     margin: 0;
     padding: 0;
     margin-bottom: 2em;
     justify-content: space-between;
-  }
-  .project3 {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 2em;
   }
   .project-img {
     width: 60%;
@@ -634,18 +630,14 @@ footer p {
   .about-content {
     width: 70%;
   }
-  .project1, .project2 {
+  .project2,
+  .project3,
+  .project4 {
     display: flex;
     margin: 0;
     padding: 0;
     margin-bottom: 2em;
     justify-content: space-between;
-  }
-  .project3 {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 2em;
   }
   .project-img {
     width: 60%;
