--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -1,54 +1,52 @@
-@use 'variables' as *; 
+@use "variables" as *;
 
-.projects{
+.projects {
   padding-top: 3.125em;
   padding-bottom: 1.125em;
-  a{
-    color:$black-clr;
+  a {
+    color: $black-clr;
   }
-  h2{
+  h2 {
     margin-bottom: 1.25em;
     text-align: center;
   }
 
-  .project-list{
-    h3{
+  .project-list {
+    h3 {
       text-align: center;
-      margin:1.25em;
+      margin: 1.25em;
     }
-    p{
+    p {
       margin-bottom: 1.25em;
     }
   }
 
-  .project-info{
+  .project-info {
     margin: 0 1.25em;
-    .technical-skills{
+    .technical-skills {
       text-align: center;
       margin-bottom: 1.25em;
-      ul{
+      ul {
         display: flex;
         justify-content: center;
-        gap:1.5em;
+        gap: 1.5em;
       }
     }
-    .project-links{
+    .project-links {
       display: flex;
       justify-content: center;
-      gap:1.25em;
-      margin-bottom:2em;
-      a{
+      gap: 1.25em;
+      margin-bottom: 2em;
+      a {
         text-decoration: none;
         cursor: pointer;
       }
-      a:hover{
+      a:hover {
         border-bottom: 2px solid $eerie-black-clr;
       }
-      a:focus-visible{
+      a:focus-visible {
         border: 2px solid $ecru-clr;
       }
     }
   }
 }
-
-
