--- a/styles/partials/_techSkills.scss
+++ b/styles/partials/_techSkills.scss
@@ -1,34 +1,29 @@
-@use 'variables' as *;
+@use "variables" as *;
 
 .skills-section {
-  background-color:$eerie-black-clr;  
-  color:$white-clr;
-  margin:0;
-  padding:3.125em 0;
-  
-  .skills-content{ 
-    h2{
-      text-align:center;
-      margin-bottom:2em;
+  background-color: $eerie-black-clr;
+  color: $white-clr;
+  margin: 0;
+  padding: 3.125em 0;
+
+  .skills-content {
+    h2 {
+      text-align: center;
+      margin-bottom: 2em;
     }
-    ul{
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(95px, auto));
-      grid-gap:1.5em;
-    li{
-      width:75%;
-      justify-self:center;
-      align-self:center;
-      i{
-        font-size:1.5rem;
-        margin-bottom: 0.25em;
-      }
+    ul {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(95px, auto));
+      grid-gap: 1.5em;
+      li {
+        width: 75%;
+        justify-self: center;
+        align-self: center;
+        i {
+          font-size: 1.5rem;
+          margin-bottom: 0.25em;
+        }
       }
     }
   }
 }
-
-
-
-
-
